configs/_deployment-chatapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: image-registry.openshift-image-registry.svc:5000/<namespace>/nodejs-app:latest # todo check this path
        ports:
        - containerPort: 8080
