configs/deployment-chatapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
      - name: chat-app
        image: default-route-openshift-image-registry.apps.sandbox-m2.ll9k.p1.openshiftapps.com/dominik-dev/chat-app
        ports:
        - containerPort: 8080
