configs/deployment-keycloak-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak-db
    spec:
      containers:
      - name: keycloak-db
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: keycloak-db-data
      volumes:
      - name: keycloak-db-data
        persistentVolumeClaim:
          claimName: keycloak-db
