configs/service-chatapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatapp-service
spec:
  selector:
    app: chat-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
