configs/service-keycloak-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
spec:
  ports:
  - port: 5432
  selector:
    app: keycloak-db
