configs/route-chatapp.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: chatapp-route
spec:
  to:
    kind: Service
    name: chatapp-service
  port:
    targetPort: 80
  tls:
    termination: edge
