configs/route-keycloak.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak
  port:
    targetPort: 8443
  tls:
    termination: reencrypt
